# code-uv-python-cicd-public

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
notebooks/: environment.yml  notebook_test1.ipynb
scripts/: release_execute.sh
