[project]
name = "python-snowflake-cicd"
version = "1.0.0"
description = "Python Snowflake CI/CD"
readme = "README.md"
authors = [{ name = "user1", email = "<user1@example.com>" }]
requires-python = "==3.10.18"

dependencies = [
    "snowflake==1.9.0",
    "snowflake-snowpark-python==1.44.0",
    "keyring==25.7.0",
    "sqlfluff==4.0.0",
    "pre-commit>=4.0",
    "ipykernel==6.28.0",
    # Security compliance
    ]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.black]
line-length = 150
target-version = ["py310"]
skip-string-normalization = true
skip-magic-trailing-comma = false

[tool.sqlfluff.core]
dialect = "snowflake"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 200
large_file_skip_byte_limit = 100000
exclude_rules = ["L029", "L031"]

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.templater.jinja.context]
env = "dummy"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
